# aispekt

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: cli.rs  golden.rs  judge_cli.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: analyze.rs  judge.rs  lib.rs  parse.rs  render.rs  rulepack.rs  types.rs
crates/core/src/checks/: file.rs  repo.rs
crates/core/tests/: judge.rs  properties.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
npm/: make-platform-package.mjs
npm/aispekt/: package.json
redirect/: worker.js  wrangler.jsonc
rules/: judgepack.json  rulepack.json
skills/aispekt-judge/: SKILL.md
src/: cli.ts  main.ts  style.css  wasmEngine.ts
src/engine/: analyze.ts  parse.ts  types.ts
src/engine/checks/: file-checks.ts  repo-checks.ts
src/ui/: render.ts
test/: calibration.test.ts  checks.test.ts  cli.test.ts  engine.property.test.ts  engine.test.ts  helpers.ts  repo-checks.test.ts  rulepack.test.ts  strip-root.test.ts  wasm.test.ts
test/fixtures/: bad.md  good.md
test/golden/corpus/: bom.md  contradictions.md  emphasis.md  hugefile.md  ignores.md  longfile.md  minimal.md  secrets.md  unicode.md  vague.md
test/golden/corpus/bridge-repo/: AGENTS.md
test/golden/corpus/drift-repo/: AGENTS.md  CLAUDE.md  README.md  package.json
test/golden/expected/: bad.json  bom.json  contradictions.json  emphasis.json  empty.json  good.json  hugefile.json  ignores.json  longfile.json  minimal.json  repo-bridge.json  repo-drift.json  repo-repo.json  repo-symlink-repo.json  secrets.json  unicode.json  vague.json
