[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/wasm"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/erf1nd0r/aispekt"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
fancy-regex = "0.14"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
